# DiscoCameraController

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.vmem  configure.sh  experiment.sh  experiment1.csv  experiment2.csv  experiment3.csv  frame.py  meson.build
include/camera_control/: camera_controller.hpp  capture_controller.hpp  ir_controller.hpp  test_controller.hpp  vimba_controller.hpp
include/communication/: csp_server.h  param_config.h  vmem_config.h
include/message_queue/: message_queue.hpp  metadata.pb.hpp
include/utils/: common.hpp  csp_parser.hpp  errors.hpp  exposure_helper.hpp  utils.hpp
lib/VimbaX_2023-1/api/examples/VmbCPP/AsynchronousGrab/: AcquisitionHelper.cpp  AsynchronousGrab_VmbCPP
lib/VimbaX_2023-1/api/examples/VmbCPP/ChunkAccess/: ChunkAccess_VmbCPP
lib/VimbaX_2023-1/api/examples/VmbCPP/ListCameras/: ListCameras_VmbCPP
lib/VimbaX_2023-1/api/examples/VmbCPP/SynchronousGrab/: SynchronousGrab_VmbCPP
lib/VimbaX_2023-1/api/lib/cmake/vmb/: vmb-config-version.cmake
lib/VimbaX_2023-4-ARM64/api/lib/cmake/vmb/: vmb-config-version.cmake
lib/VimbaX_2023-4-ARM64/cti/: VimbaGigETL.cti  VimbaUSBTL.cti
src/: VimbaProvider.cpp  main.cpp
src/camera_control/: CMakeLists.txt  camera_controller.cpp  camera_controller.hpp  capture_controller.cpp  ir_controller.cpp  test_controller.cpp  vimba_controller.cpp
src/communication/: CMakeLists.txt  csp_server.c  csp_server.cpp  csp_server.hpp  message_queue.cpp  message_queue.hpp  param_config.c  param_config.hpp  vmem_config.c  vmem_config.hpp
src/helpers/: CMakeLists.txt  exposure_helper.cpp
src/include/: VimbaProvider.hpp  types.hpp
src/include/helpers/: exposure_helper.hpp
src/include/providers/: VimbaProvider.hpp  message_queue.hpp  vimba_provider.hpp
src/message_queue/: message_queue.cpp  metadata.pb.cpp
src/providers/: CMakeLists.txt  VimbaProvider.cpp  message_queue.cpp  vimba_provider.cpp
src/utils/: CMakeLists.txt  common.hpp  csp_parser.cpp  csp_parser.hpp  exposure_helper.cpp  exposure_helper.hpp
test_code/: README.md  client  csp_client.cpp  csp_server.cpp  parser  parser.cpp  proxy  receiver  receiver.cpp  sender.cpp  server
